# vgpu-bench

./: .gitignore  Cargo.toml  README.md  run.sh  run_first_frame.sh  run_single.sh
.github/workflows/: build.yml
cpp-interface/: lib.h  renderer.h
crates/benchmark-macro-derive/: Cargo.toml
crates/benchmark-macro-derive/src/: lib.rs
crates/naive-renderer/: Cargo.toml
crates/naive-renderer/src/: error.rs  export.rs  lib.rs  main.rs  state.rs  triangle_renderer.rs  types.rs  util.rs
crates/naive-renderer/src/shaders/: frag.wgsl  vert.wgsl  vert.wgsl.template
crates/proc-macro-measurable/: Cargo.toml
crates/proc-macro-measurable/src/: lib.rs
crates/render-lib/: Cargo.toml
crates/render-lib/src/: lib.rs
crates/render-lib/src/artifacts/: mod.rs
crates/render-lib/src/benching/: error.rs  mod.rs  output.rs  rendering.rs  timing.rs
crates/render-lib/src/rendering/: mod.rs  renderer.rs
crates/render-lib/src/rendering/naive/: bin.rs  export.rs  mod.rs  renderer.rs  state.rs  types.rs  util.rs
crates/render-lib/src/rendering/naive/shaders/: frag.wgsl  vert.wgsl
crates/renderer/: Cargo.toml
crates/renderer/examples/cpp/: renderer.cpp
crates/renderer/ffi/examples/: .gitignore
crates/renderer/ffi/examples/cpp/: Makefile
crates/renderer/src/: c.rs  c_lib.rs  cpp.rs  cpp_lib.rs  error.rs  ffi.rs  lib.rs  renderer.rs  rust.rs
crates/renderer/src/artifacts/: mod.rs  types.rs
crates/renderer/src/targets/: mod.rs  svg_document.rs  svg_file.rs
crates/rendering-util/: Cargo.toml
crates/rendering-util/src/: lib.rs
crates/rendering-util/src/benching/: error.rs  mod.rs  output.rs  timing.rs
crates/rendering-util/src/renderers/: mod.rs  renderer1.rs
crates/svg-generator/: .gitignore  Cargo.toml
crates/svg-generator/examples/: .gitignore  basic.sh  make_all.sh  make_triangles.sh
crates/svg-generator/src/: bin.rs  lib.rs  main.rs  primitives.rs  writer.rs
crates/tess-lib/: Cargo.toml
crates/tess-lib/src/: benching.rs  lib.rs  lyon_tessellator.rs  tessellation_result.rs  tessellation_target.rs  tessellator.rs
crates/tess-lib/src/artifacts/: mod.rs  primitive_results.rs  render_results.rs  rendering_results.rs  svg_profile_result.rs  svg_results.rs  tessellation_results.rs  time_result.rs  types.rs
crates/tess-lib/src/backends/: lyon_tessellator.rs  mod.rs
crates/tess-lib/src/benching/: error.rs  io.rs  mod.rs  output.rs  primitive_benching.rs  profiling.rs  rendering.rs  tessellating.rs
crates/tess-lib/src/renderer/: bin.rs  error.rs  mod.rs  renderer.rs  state.rs  types.rs  util.rs
crates/tess-lib/src/renderer/shaders/: frag.wgsl  shader.wgsl  vert.wgsl
crates/tess-lib/src/targets/: mod.rs  svg_document.rs  svg_file.rs  svg_target.rs
crates/tessellation-util/: Cargo.toml
crates/tessellation-util/src/: lib.rs
crates/tessellation-util/src/artifacts/: mod.rs
crates/tessellation-util/src/backends/: lyon_tessellator.rs  mod.rs
crates/tessellation-util/src/benching/: error.rs  mod.rs  output.rs  profiling.rs  tessellating.rs
crates/tessellator/: Cargo.toml
crates/tessellator/src/: main.rs
examples/: .gitkeep  benchmark.rs  boolean_plot.rs  conversions.rs  driver.rs  gpu_annotation.rs  monitor.rs  numeric_plot.rs  plot.rs  plotting_naive.rs  plotting_resvg.rs  simple.rs
examples/time_frames/: benchmark.rs
ffi/: renderer.h
ffi/examples/c/: Makefile  renderer.c
ffi/examples/cpp/: renderer.cpp
src/: bin.rs  driver.rs  error.rs  lib.rs  lyon_tessellator.rs  macros.rs  main.rs  nvidia_driver.rs  nvidia_monitor.rs  rendering.rs  tess_lib.rs  tessellation.rs  util.rs
src/benchmarks/: benchmark.rs  mod.rs  test_benchmark.rs
src/benchmarks/rendering/: error.rs  mod.rs  naive_primitive_rendering.rs  naive_svg_renderer.rs  naive_svg_rendering.rs  output.rs  time_naive_svg_file_rendering.rs  time_naive_svg_primitive_rendering.rs  time_svg_file_rendering.rs
src/benchmarks/tessellation/: error.rs  mod.rs  path_profile_svg_files.rs  primitive_timing.rs  profile.rs  profile_svg_files.rs  profile_svg_primitives.rs  time_svg_files.rs  time_svg_primitives.rs
src/data_generator/: commands.rs  main.rs  primitives.rs  writer.rs
src/driver/: driver.rs  mod.rs  run_options.rs
src/lyon/: main.rs
src/models/: benchmark.rs  benchmark_fn.rs  benchmark_metadata.rs  driver.rs  measurable.rs  mod.rs  monitor.rs  monitor_history.rs  monitor_metadata.rs  unit.rs
src/models/benchmark/: benchmark.rs  benchmark_fn.rs  benchmark_metadata.rs  benchmark_options.rs  mod.rs
src/models/data/: bundles.rs  measurable.rs  measurement.rs  measurements.rs  mod.rs
src/models/driver/: driver.rs  driver_builder.rs  driver_options.rs  mod.rs
src/models/monitor/: mod.rs  monitor.rs  monitor_frequency.rs  monitor_metadata.rs
src/models/plotter/: mod.rs  plotter.rs
src/models/plotting/: boolean_plotter.rs  measurable.rs  mod.rs  numeric_plotter.rs  plotter.rs
src/models/plotting/py/: .gitignore  boolean.py  numeric_line.py  numeric_line_single.py  plot_frametimes_files.py  plot_naive_frametimes_files.py  plot_naive_frametimes_primitives.py  plot_tessellation_time_svg_primitives.py  util.py
src/models/writer/: mod.rs  writer.rs
src/monitors/: cpu_utilization.rs  error.rs  heartbeat.rs  memory_utilization.rs  mod.rs
src/svg_generator/: main.rs  primitives.rs  writer.rs
src/util/: convert.rs  exec.rs  io.rs  logging.rs  mod.rs
tests/: .gitkeep  tessellation.rs
tools/plotter/: .gitignore  2d_line.py  helper_methods.py  plot_example_profiles.py  plot_examples_frametimes.py  plot_examples_naive_frametimes.py  plot_examples_profiles.py  plot_frametimes_files.py  plot_naive_frametimes_files.py  plot_naive_frametimes_primitives.py  plot_path_profile_svg_files.py  plot_primitive_frametimes.py  plot_primitive_naive_frametimes.py  plot_primitive_tessellation.py  plot_profile_svg_files.py  plot_tessellation_time_svg_primitives.py  profile_examples.py  render_primitives_triangles.py  tess_primitives.py  time_examples_rendering.py  time_primitives_cubic_curves.py  time_primitives_curves.py  time_primitives_triangles.py
