[package]
name = "vgpu-bench"
description = "A testing framework for vector graphic rendering libraries"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/simbleau/vgpu-bench"
keywords = ["gpu", "vector", "graphics"]
exclude = [
    "assets/",
    "examples/",
    "ffi/",
    "tests/",
    "tools/",
]

[[bin]]
name = "renderkit"
path = "src/bin/renderkit.rs"

[[bin]]
name = "plotting_renderkit"
path = "src/bin/plotting_renderkit.rs"

[[bin]]
name = "plotting_renderkit_cpu_util"
path = "src/bin/plotting_renderkit_cpu_util.rs"

[[bin]]
name = "plotting_resvg"
path = "src/bin/plotting_resvg.rs"

[[bin]]
name = "plotting_resvg"
path = "src/bin/plotting_resvg.rs"

[[bin]]
name = "plotting_pathfinder"
path = "src/bin/plotting_pathfinder.rs"

[[bin]]
name = "plotting_pathfinder_cpu_util"
path = "src/bin/plotting_pathfinder_cpu_util.rs"

[lib]
name = "vgpu_bench"
path = "src/lib.rs"

[workspace]
members = [
    "crates/proc-macro-measurable",
    "crates/renderer",
    "crates/svg-generator",
    "crates/tessellation-util",
    "crates/rendering-util",
    "crates/naive-renderer",
]

[dependencies]
proc_macro_measurable = { package = "proc-macro-measurable", path = "crates/proc-macro-measurable" }
renderer = { package = "renderer", path = "crates/renderer" }
tessellation-util = { package = "tessellation-util", path = "crates/tessellation-util" }
rendering-util = { package = "rendering-util", path = "crates/rendering-util" }
naive-renderer = { package = "naive-renderer", path = "crates/naive-renderer" }
svg-generator = { package = "svg-generator", path = "crates/svg-generator" }
pathfinder_vgpu_glue = { git="https://github.com/simbleau/pathfinder.git" }

nvtx = {  version = "0.11", package = "nvtx-rs" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"]}
crossbeam = "0.8"
systemstat = "0.1.10"
clap = "3.0.14"
lyon = { version ="0.17.5", features = ["extra"] }
usvg = "0.22.0"
walkdir = "2"
csv = "1.1"
log = "0.4"
simplelog = { version = "0.11.2" }
serde = "1.0.130"
erased-serde = "0.3"
chrono = "0.4.19"
anyhow = "1.0.45"
thiserror = "1.0.30"
resvg = "0.22.0"
tiny-skia = "0.6.1"
[dev-dependencies]
rand = "0.8.4"
resvg = "0.22.0"
tiny-skia = "0.6.1"