[package]
name = "vgpu-bench"
description = "A testing framework for vector graphic rendering libraries"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/simbleau/vgpu-bench"
keywords = ["gpu", "vector", "graphics"]
exclude = [
    "assets/",
    "examples/",
    "ffi/",
    "tests/",
    "tools/",
]


[lib]
name = "vgpu_bench"
path = "src/lib.rs"

[[bin]]
name = "nvidia_monitor"
path = "src/bin/monitors/nvidia_monitor.rs"

[workspace]
members = [
    "crates/proc-macro-measurable",
    "crates/renderer",
    "crates/svg-generator",
    "crates/tessellation-util",
    "crates/rendering-util",
    "crates/naive-renderer",
]

[dependencies]
proc_macro_measurable = { package = "proc-macro-measurable", path = "crates/proc-macro-measurable" }
renderer = { package = "renderer", path = "crates/renderer" }
tessellation-util = { package = "tessellation-util", path = "crates/tessellation-util" }
rendering-util = { package = "rendering-util", path = "crates/rendering-util" }
naive-renderer = { package = "naive-renderer", path = "crates/naive-renderer" }
svg-generator = { package = "svg-generator", path = "crates/svg-generator" }
pathfinder_vgpu_glue = { git="https://github.com/simbleau/pathfinder.git" }

nvtx = {  version = "0.11", package = "nvtx-rs" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"]}
crossbeam = "0.8"
systemstat = "0.1.10"
clap = "3.0.14"
lyon = { version ="0.17.10", features = ["extra"] }
usvg = "0.21.0"
walkdir = "2"
csv = "1.1"
log = "0.4"
simplelog = { version = "0.11.2" }
serde = "1.0.130"
erased-serde = "0.3"
chrono = "0.4.19"
anyhow = "1.0.56"
thiserror = "1.0.30"

[dev-dependencies]
rand = "0.8.5"