[package]
name = "vgpu-bench"
description = "A testing framework for vector graphic rendering libraries"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/simbleau/vgpu-bench"
keywords = ["gpu", "vector", "graphics"]
exclude = [
    "assets/",
    "examples/",
    "ffi/",
    "tests/",
    "tools/",
]


[lib]
name = "vgpu_bench"
path = "src/lib.rs"

[workspace]
members = [
    "crates/proc-macro-measurable",
]

[dependencies]
proc_macro_measurable = { package = "proc-macro-measurable", path = "crates/proc-macro-measurable" }
# renderer = { package = "renderer", path = "crates/renderer" }
# tessellation-util = { package = "tessellation-util", path = "crates/tessellation-util" }
# rendering-util = { package = "rendering-util", path = "crates/rendering-util" }
# svg-tessellation-renderer = { git="https://github.com/kurbos/svg-tessellation-renderer" }
# svg-generator = { git="https://github.com/kurbos/svg-generator" }

nvtx = {  version = "0.11", package = "nvtx-rs" }
crossbeam = "0.8"
systemstat = "0.1.11"
clap = "3.2.8"
lyon = { version ="0.17.10", features = ["extra"] }
usvg = "0.23.0"
walkdir = "2"
csv = "1.1"
log = "0.4"
simplelog = { version = "0.12.0" }
serde = { version = "1.0.138", features = ["derive"] }
erased-serde = "0.3"
anyhow = "1.0.58"
thiserror = "1.0.31"
plotters = "0.3.1"

[dev-dependencies]
rand = "0.8.5"