[package]
name = "naive-renderer"
description = "A naive-renderer using SVG tessellation and triangle rendering"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
workspace = "../.."

[lib]
name = "naive_renderer"
path = "src/lib.rs"

[[bin]]
name = "naive_renderer"
path = "src/main.rs"

[dependencies]
svg-gen = { package = "svg-generator", path = "../svg-generator" }
tess-lib = { package = "tess-lib", path = "../tess-lib" }
renderer = { package = "renderer", path = "../renderer" }

clap = "2.33.3"
lyon = {version ="0.17.5", features = ["extra"]}
usvg = "0.19.0"
serde = { version = "1.0.130", features = ["derive"] }
walkdir = "2"
csv = "1.1"
winit = "0.25"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
bytemuck = "1.2.0"