[package]
name = "naive-renderer"
description = "A naive-renderer using SVG tessellation and triangle rendering"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
workspace = "../.."

[lib]
name = "naive_renderer"
path = "src/lib.rs"

[[bin]]
name = "naive_renderer"
path = "src/main.rs"

[dependencies]
svg-gen = { package = "svg-generator", path = "../svg-generator" }
tessellation-util = { package = "tessellation-util", path = "../tessellation-util" }
renderer = { package = "renderer", path = "../renderer" }

clap = "2.34.0"
lyon = {version ="0.17.10", features = ["extra"]}
usvg = "0.22.0"
serde = { version = "1.0.136", features = ["derive"] }
walkdir = "2"
csv = "1.1"
winit = "0.26.1"
log = "0.4"
wgpu = "0.12.0"
pollster = "0.2"
bytemuck = "1.9.1"
thiserror = "1.0.30"