[package]
name = "render-lib"
description = "Library for render benching"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
workspace = "../.."

[lib]
name = "render_lib"
path = "src/lib.rs"

[dependencies]
naive-renderer = { package = "naive-renderer", path = "../naive-renderer" }
renderer = { package = "renderer", path = "../renderer" }
svg-generator = { package = "svg-generator", path = "../svg-generator" }
tess-lib = { package = "tess-lib", path = "../tess-lib" }

clap = "2.33.3"
lyon = {version ="0.17.5", features = ["extra"]}
usvg = "0.19.0"
serde = { version = "1.0.130", features = ["derive"] }
walkdir = "2"
csv = "1.1"
log = "0.4"
bytemuck = "1.2.0"