[package]
name = "svg-generator"
description = "Generates SVG files for given shapes and parameters"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
keywords = ["svg"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
readme = "README.md"
workspace = "../.."

[lib]
name = "svg_generator"
path = "src/lib.rs"

[[bin]]
name = "svg-generator"
path = "src/bin.rs"

[dependencies]
clap = "2.33.3"
xmlwriter = "0.1.0"
dynfmt = {version = "0.1.5", features = ["curly"]}

[dev-dependencies]
