[package]
name = "tess-lib"
description = "Library for tessellation benching"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
workspace = "../.."

[dependencies]
lyon = {version ="0.17.5", features = ["extra"]}
svg-gen = { package = "svg-generator", path = "../svg-generator" }
usvg = "0.18.0"
futures = "0.3.5"
serde = { version = "1.0.130", features = ["derive"] }
walkdir = "2"
csv = "1.1"
