[package]
name = "tessellation-util"
description = "Library for tessellation benching"
version = "0.1.0"
authors = ["Spencer Imbleau <spencer@imbleau.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simbleau/vgpu-bench"
workspace = "../.."

[lib]
name = "tessellation_util"
path = "src/lib.rs"

[dependencies]
svg-gen = { package = "svg-generator", path = "../svg-generator" }
renderer = { package = "renderer", path = "../renderer" }

clap = "2.33.3"
lyon = {version ="0.17.10", features = ["extra"]}
usvg = "0.19.0"
serde = { version = "1.0.136", features = ["derive"] }
csv = "1.1"
log = "0.4"
bytemuck = "1.2.0"
erased-serde = "0.3"
thiserror = "1.0.30"